<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>Synapse</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <exec.mainClass>com.mycompany.synapse.Synapse</exec.mainClass>
    </properties>

<build>
    <resources>
        <resource>
            <directory>src/main/resources</directory>
            <includes>
                <include>fonts/Poppins-Bold.ttf</include>
                
                <include>images/FundosTelas/Default.png</include>
                <include>images/FundosTelas/ExbCurso.png</include>
                <include>images/FundosTelas/FundoCadastrarAdmin.png</include>
                <include>images/FundosTelas/FundoCadastrarCurso.png</include>
                <include>images/FundosTelas/FundoCadastrarCurso2.png</include>
                <include>images/FundosTelas/FundoCadastro.png</include>
                <include>images/FundosTelas/FundoCarrinho.png</include>
                <include>images/FundosTelas/FundoCrudAdmin.png</include>
                <include>images/FundosTelas/FundoCursos.png</include>
                <include>images/FundosTelas/FundoDefault.png</include>
                <include>images/FundosTelas/FundoLogin.png</include>
                <include>images/FundosTelas/FundoMenu.png</include>
                <include>images/FundosTelas/FundoPerfil.png</include>
                <include>images/FundosTelas/FundoSobre.png</include>
                <include>images/FundosTelas/bannerCursos.png</include>
                <include>images/FundosTelas/janelaAlerta.png</include>
                <include>images/FundosTelas/janelaAlertaAdmin.png</include>
                             
                <include>images/Botoes/acessarConteudo.png</include>
                <include>images/Botoes/acessarConteudoAzul.png</include>
                <include>images/Botoes/acessoLogin.png</include>
                <include>images/Botoes/acessoLoginAzul.png</include>
                <include>images/Botoes/addCarrinho.png</include>
                <include>images/Botoes/addCarrinhoAzul.png</include>
                <include>images/Botoes/AplicarDesconto.png</include>
                <include>images/Botoes/AplicarDescontoAzul.png</include>
                <include>images/Botoes/Cadastrar.png</include>
                <include>images/Botoes/CadastrarAdmin.png</include>
                <include>images/Botoes/CadastrarAdmin2.png</include>
                <include>images/Botoes/CadastrarAzul.png</include>
                <include>images/Botoes/Cadastrarse.png</include>
                <include>images/Botoes/CadastrarseAzul.png</include>
                <include>images/Botoes/CadastrarseSeta.png</include>
                <include>images/Botoes/Carrinho.png</include>
                <include>images/Botoes/CarrinhoAzul.png</include>
                <include>images/Botoes/checkboxFAdm.png</include>
                <include>images/Botoes/checkboxTAdm.png</include>
                <include>images/Botoes/Conta.png</include>
                <include>images/Botoes/ContaAzul.png</include>
                <include>images/Botoes/Cursos.png</include>
                <include>images/Botoes/CursosAzul.png</include>
                <include>images/Botoes/EditarAdmin.png</include>
                <include>images/Botoes/EditarAdmin2.png</include>
                <include>images/Botoes/EditPerfil.png</include>
                <include>images/Botoes/EditPerfilSalvar.png</include>
                <include>images/Botoes/EditSenha.png</include>
                <include>images/Botoes/EditSenhaAzul.png</include>
                <include>images/Botoes/Entrar.png</include>
                <include>images/Botoes/EntrarAzul.png</include>
                <include>images/Botoes/EntrarSeta.png</include>
                <include>images/Botoes/EsqueciSenha.png</include>
                <include>images/Botoes/EsqueciSenhaAzul.png</include>
                <include>images/Botoes/ExcluirAdmin.png</include>
                <include>images/Botoes/ExcluirAdmin2.png</include>
                <include>images/Botoes/FazerLogin.png</include>
                <include>images/Botoes/FazerLoginAzul.png</include>
                <include>images/Botoes/FinalizarCompra.png</include>
                <include>images/Botoes/IconSynapseAzul.png</include>
                <include>images/Botoes/IconSynapsePreto.png</include>
                <include>images/Botoes/Listar.png</include>
                <include>images/Botoes/Listar2.png</include>
                <include>images/Botoes/Login.png</include>
                <include>images/Botoes/LoginAzul.png</include>
                <include>images/Botoes/Logout.png</include>
                <include>images/Botoes/LogoutAzul.png</include>
                <include>images/Botoes/MeuPerfil.png</include>
                <include>images/Botoes/MeuPerfilAzul.png</include>
                <include>images/Botoes/MeusCursos.png</include>
                <include>images/Botoes/MeusCursosAzul.png</include>
                <include>images/Botoes/Next.png</include>
                <include>images/Botoes/Next2.png</include>
                <include>images/Botoes/prosseguirAdm.png</include>
                <include>images/Botoes/prosseguirAdm2.png</include>
                <include>images/Botoes/Sacola.png</include>
                <include>images/Botoes/SacolaAzul.png</include>
                <include>images/Botoes/SalvarAlt.png</include>
                <include>images/Botoes/SalvarAlt2.png</include>
                <include>images/Botoes/SacolaAzul.png</include>
                <include>images/Botoes/SenhaMostrar.png</include>
                <include>images/Botoes/SenhaMostrarAdmin.png</include>
                <include>images/Botoes/SenhaOcultar.png</include>
                <include>images/Botoes/SenhaOcultarAdmin.png</include>
                <include>images/Botoes/SenhaOcultarNull.png</include>
                <include>images/Botoes/Seta.png</include>
                <include>images/Botoes/SetaCursos.png</include>
                <include>images/Botoes/SetaMenu.png</include>
                <include>images/Botoes/Sobre.png</include>
                <include>images/Botoes/SobreAzul.png</include>
                <include>images/Botoes/X.png</include>
                <include>images/Botoes/XAdmin.png</include>
                <include>images/Botoes/XAdmin2.png</include>
                <include>images/Botoes/XAzul.png</include>
                <include>images/Botoes/XCompra.png</include>
                <include>images/Botoes/XCompraAzul.png</include>
                <include>images/Botoes/XCompraJanela.png</include>
                <include>images/Botoes/XCompraJanelaAzul.png</include>
                <include>images/Botoes/XFecharTelas.png</include>
                <include>images/Botoes/XFecharTelasAdmin.png</include>
                <include>images/Botoes/XFecharTelasAdmin2.png</include>
                <include>images/Botoes/XFecharTelasVerm.png</include>

                <include>images/Formas/BarraPesquisa.png</include>
                <include>images/Formas/BarraSup.png</include>
                <include>images/Formas/BotaoCurso.png</include>
                <include>images/Formas/fotocursoDefault.png</include>
                <include>images/Formas/defaultfoto.png</include>
                <include>images/Formas/defaultfotoJanela.png</include>
                <include>images/Formas/DesenhoComputador.png</include>
                <include>images/Formas/EditarPerfil.png</include>
                <include>images/Formas/Field.png</include>
                <include>images/Formas/FundoBarraSup.png</include>
                <include>images/Formas/icon.png</include>
                <include>images/Formas/IconSynapse.png</include>
                <include>images/Formas/IconSynapse.jpg</include>
                <include>images/Formas/MeuPerfil.png</include>
                <include>images/Botoes/NomeLogo.png</include>
                <include>images/Formas/VendoVideo.png</include>
                
                <include>images/TelasCompletas/Cadastro.png</include>
                <include>images/TelasCompletas/Carrinho.png</include>
                <include>images/TelasCompletas/Cursos.png</include>
                <include>images/TelasCompletas/Default.png</include>
                <include>images/TelasCompletas/JanelaCarrinho.png</include>
                <include>images/TelasCompletas/Login.png</include>
                <include>images/TelasCompletas/Menu.png</include>
                <include>images/TelasCompletas/Perfil.png</include>
                <include>images/TelasCompletas/Sobre.png</include>
                <include>images/TelasCompletas/TelaCurso.png</include>
                <include>images/TelasCompletas/PageAdminCadastro.png</include>
                <include>images/TelasCompletas/PageAdminListar.png</include>
                
                <include>images/TelasCompletas/Janelas.png</include>

            </includes>
        </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
</build>

<dependencies>
    <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>8.0.19</version>
    </dependency>
    <dependency>
        <groupId>org.netbeans.external</groupId>
        <artifactId>AbsoluteLayout</artifactId>
      <version>RELEASE220</version>
    </dependency>
</dependencies>
        
</project>